Clean code, tối ưu code